Fixed issue with input style on safari

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
 }
 
 .image {
-  height: 100%;
+  height: 100vh;
 }
 
 .background {
@@ -46,6 +46,10 @@ body {
   padding-top: 50px;
   padding-left: 50px;
 }
+
+input[type="search"] {
+      -webkit-appearance: textfield;
+    }
 
 input {
   outline: none;
@@ -90,6 +94,10 @@ button {
 
 /* mobile */
 @media only screen and (max-width: 1024px) {
+
+  body {
+    position: fixed;
+  }
 
   .background {
     height: 100vh;
